[package]
name = "algebrars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"

[dev-dependencies]
pretty_assertions = "1.4.0"
